# paper-vault-core

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  run-dev.bat  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.trae/documents/: fix-8-issues.md  fix-annotation-tests-and-verify.md  fix-reader-and-followup-todos.md  fix-reader-remaining-work.md  remove-annotations-and-fit-pdf.md
docs/fix-reader-remaining-work/: FINAL_fix-reader-remaining-work.md
docs/paper-vault/: ACCEPTANCE_paper-vault.md  ALIGNMENT_paper-vault.md  CONSENSUS_paper-vault.md  DESIGN_paper-vault.md  FINAL_paper-vault.md  FINAL_zotero_alignment.md  (+8 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: duplicates.rs  error.rs  lib.rs  main.rs  markdown.rs  pdf.rs  seed.rs  types.rs  vault.rs
src-tauri/src/ai/: client.rs  mod.rs  presets.rs  template.rs
src-tauri/src/commands/: ai.rs  ai_chat.rs  annotation.rs  common.rs  export.rs  indexer.rs  init.rs  mod.rs  notes.rs  papers.rs  search.rs  settings.rs
src-tauri/src/db/: migrate_v2.rs  mod.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_zotero_alignment.sql  0003_drop_fulltext_index.sql  0004_ai_conversations.sql
src-tauri/src/export/: bibtex.rs  citation.rs  csl.rs  mod.rs  ris.rs
src-tauri/src/services/: ai_chat.rs  ai_svc.rs  annotation.rs  duplicate.rs  export.rs  identifier.rs  index.rs  merge.rs  mod.rs  note.rs  paper.rs  preset.rs  resolver.rs  search.rs
(+34 files in other folders)
